change some labels to accomodate the new custom select field

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -241,12 +241,12 @@
   "EditListingPricingForm.paymentTypeLabel": "How would you accept payments?",
   "EditListingPricingForm.paymentTypePlaceholder": "Choose a payment type...",
   "EditListingPricingForm.paymentTypeRequired": "You need to choose a payment type",
-  "EditListingSubjectForm.classLevelTypeLabel": "How would you categorize your class?",
-  "EditListingSubjectForm.classLevelTypePlaceholder": "Choose a category...",
-  "EditListingSubjectForm.classLevelTypeRequired": "You need to select a category for your class.",
-  "EditListingSubjectForm.classLevelLabel": "What level is this class at?",
-  "EditListingSubjectForm.classLevelPlaceholder": "Choose a level...",
-  "EditListingSubjectForm.classLevelRequired": "You need to select a level for your class.",
+  "EditListingSubjectForm.typeOfLevelLabel": "How would you categorize your class?",
+  "EditListingSubjectForm.typeOfLevelPlaceholder": "Choose a category...",
+  "EditListingSubjectForm.typeOfLevelRequired": "You need to select a category for your class.",
+  "EditListingSubjectForm.levelLabel": "What level is this class at?",
+  "EditListingSubjectForm.levelPlaceholder": "Choose a level...",
+  "EditListingSubjectForm.levelRequired": "You need to select a level for your class.",
   "EditListingSubjectForm.subject": "The name of the subject",
   "EditListingSubjectForm.subjectPlaceholder": "What does the knowledge give you?",
   "EditListingSubjectForm.subjectRequired": "A subject is required.",
