--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -255,6 +255,7 @@
   "EditListingSubjectForm.updateFailed": "Failed to update listing. Please try again.",
   "EditListingSubjectPanel.createListingTitle": "What does it teach?",
   "EditListingSubjectPanel.title": "Edit the subject of {listingTitle}",
+  "EditListingClassURLPanel.title": "Edit the URLs of {listingTitle}?",
   "EditListingClassURLPanel.createListingTitle": "Where is your class held?",
   "EditListingPricingPanel.createListingTitle": "How much does it cost per hour?",
   "EditListingPricingPanel.listingPriceCurrencyInvalid": "Listing currency is different from the marketplace currency. You cannot edit the price.",
@@ -269,6 +270,7 @@
   "EditListingWizard.saveEditAvailability": "Save availability",
   "EditListingWizard.saveEditPhotos": "Save photos",
   "EditListingWizard.saveEditPolicies": "Save rules",
+  "EditListingWizard.saveEditClassURL": "Save URLs",
   "EditListingWizard.saveEditPricing": "Save pricing",
   "EditListingWizard.saveNewDescription": "Next: Subject",
   "EditListingWizard.saveNewSubject": "Next: Class URL",
