--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -86,7 +86,7 @@
   "BookingDateRangeFilter.labelSelectedPopup": "{dates}",
   "BookingPanel.closedListingButtonText": "Sorry, this listing has been closed.",
   "BookingPanel.ctaButtonMessage": "Request to book",
-  "BookingPanel.hostedBy": "Hosted by {name}",
+  "BookingPanel.hostedBy": "Created by {name}",
   "BookingPanel.perDay": "per day",
   "BookingPanel.perNight": "per night",
   "BookingPanel.perUnit": "per unit",
@@ -95,7 +95,7 @@
   "CheckoutPage.chargeDisabledMessage": "This provider's payout information is incomplete so this listing cannot be booked. Please contact the marketplace administrators.",
   "CheckoutPage.errorlistingLinkText": "the sauna page",
   "CheckoutPage.goToLandingPage": "Go to homepage",
-  "CheckoutPage.hostedBy": "Hosted by {name}",
+  "CheckoutPage.hostedBy": "Created by {name}",
   "CheckoutPage.initiateOrderAmountTooLow": "We are unable to process this payment since the payment amount is too low. Please contact the marketplace administrator.",
   "CheckoutPage.initiateOrderError": "Payment request failed. Please go back to {listingLink} and try again. If the error persists, try refreshing the page or contacting the marketplace administrator.",
   "CheckoutPage.initiateOrderStripeError": "The payment processor gave the following errors: {stripeErrors}",
@@ -387,7 +387,7 @@
   "LayoutWrapperAccountSettingsSideNav.paymentMethodsTabTitle": "Payment methods",
   "LimitedAccessBanner.message": "Your are logged in as {firstName} {lastName}. You have limited rights for actions.",
   "LimitedAccessBanner.logout": "Log out",
-  "ListingCard.hostedBy": "Hosted by {authorName}.",
+  "ListingCard.hostedBy": "Created by {authorName}.",
   "ListingCard.perDay": "per day",
   "ListingCard.perNight": "per night",
   "ListingCard.perUnit": "per unit",
@@ -404,7 +404,7 @@
   "ListingPage.errorLoadingListingTitle": "Error in loading listing",
   "ListingPage.featuresTitle": "Amenities",
   "ListingPage.finishListing": "Finish listing",
-  "ListingPage.hostedBy": "Hosted by {name}",
+  "ListingPage.hostedBy": "Created by {name}",
   "ListingPage.loadingListingMessage": "Loading listing…",
   "ListingPage.loadingListingTitle": "Loading listing…",
   "ListingPage.locationTitle": "Location",
