--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -403,6 +403,8 @@
   "ListingPage.errorLoadingListingMessage": "Could not load listing. Please try again.",
   "ListingPage.errorLoadingListingTitle": "Error in loading listing",
   "ListingPage.featuresTitle": "Amenities",
+  "ListingPage.subjectTitle": "What this class teaches",
+  "ListingPage.subjectAndLevel": "This class teaches {subject} for {level}.",
   "ListingPage.finishListing": "Finish listing",
   "ListingPage.hostedBy": "Created by {name}",
   "ListingPage.loadingListingMessage": "Loading listing…",
