--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -398,6 +398,7 @@
   "ListingPage.closedListing": "This listing has been closed and can't be booked.",
   "ListingPage.contactUser": "Contact",
   "ListingPage.descriptionTitle": "About this class",
+  "ListingPage.recommendListingsTitle": "More from this user",
   "ListingPage.editListing": "Edit listing",
   "ListingPage.editProfileLink": "Edit profile",
   "ListingPage.errorLoadingListingMessage": "Could not load listing. Please try again.",
