add en translation for price in booking panel

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -90,6 +90,8 @@
   "BookingPanel.perDay": "per day",
   "BookingPanel.perNight": "per night",
   "BookingPanel.perUnit": "per unit",
+  "BookingPanel.perHour": "per hour",
+  "BookingPanel.priceTitleOnDesktop": "Price: {price}",
   "BookingPanel.subTitleClosedListing": "Sorry, this listing has been closed.",
   "CheckoutPage.bookingTimeNotAvailableMessage": "Unfortunately, the requested time is already booked.",
   "CheckoutPage.chargeDisabledMessage": "This provider's payout information is incomplete so this listing cannot be booked. Please contact the marketplace administrators.",
@@ -393,7 +395,7 @@
   "ListingCard.perUnit": "per unit",
   "ListingCard.unsupportedPrice": "({currency})",
   "ListingCard.unsupportedPriceTitle": "Unsupported currency ({currency})",
-  "ListingPage.bookingSubTitle": "Start by choosing your dates.",
+  "ListingPage.bookingSubTitle": "Choose how you'd pay and when to study.",
   "ListingPage.bookingTitle": "Book {title}",
   "ListingPage.closedListing": "This listing has been closed and can't be booked.",
   "ListingPage.contactUser": "Contact",
