--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -417,6 +417,7 @@
   "ListingPage.ownListing": "This is your own listing.",
   "ListingPage.ownListingDraft": "This listing is a draft.",
   "ListingPage.ownListingPendingApproval": "This listing is pending approval.",
+  "ListingPage.paymentTypeTitle": "Accepted payment types",
   "ListingPage.perDay": "per day",
   "ListingPage.perNight": "per night",
   "ListingPage.perUnit": "per unit",
