--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -93,6 +93,17 @@
   "BookingPanel.perHour": "per hour",
   "BookingPanel.priceTitleOnDesktop": "Price: {price}",
   "BookingPanel.subTitleClosedListing": "Sorry, this listing has been closed.",
+  "BookingStartDateAndTimeForm.bookingStartTitle": "Start date",
+  "BookingStartDateAndTimeForm.fetchLineItemsError": "Oops, something went wrong. Please refresh the page and try again.",
+  "BookingStartDateAndTimeForm.listingCurrencyInvalid": "Oops, the currency of the listing doesn't match the currency of the marketplace.",
+  "BookingStartDateAndTimeForm.listingPriceMissing": "Oops, this listing has no price!",
+  "BookingStartDateAndTimeForm.ownListing": "You won't be able to book your own listing.",
+  "BookingStartDateAndTimeForm.placeholder": "mm/dd/yyyy",
+  "BookingStartDateAndTimeForm.priceBreakdownTitle": "Booking breakdown",
+  "BookingStartDateAndTimeForm.requestToBook": "Request to book",
+  "BookingStartDateAndTimeForm.requiredDate": "Oops, make sure your date is correct!",
+  "BookingStartDateAndTimeForm.timeSlotsError": "Loading listing availability failed. Please refresh the page.",
+  "BookingStartDateAndTimeForm.youWontBeChargedInfo": "You won't be charged yet",
   "CheckoutPage.bookingTimeNotAvailableMessage": "Unfortunately, the requested time is already booked.",
   "CheckoutPage.chargeDisabledMessage": "This provider's payout information is incomplete so this listing cannot be booked. Please contact the marketplace administrators.",
   "CheckoutPage.errorlistingLinkText": "the sauna page",
