--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -104,6 +104,12 @@
   "BookingStartDateAndTimeForm.requiredDate": "Oops, make sure your date is correct!",
   "BookingStartDateAndTimeForm.timeSlotsError": "Loading listing availability failed. Please refresh the page.",
   "BookingStartDateAndTimeForm.youWontBeChargedInfo": "You won't be charged yet",
+  "BookingStartDateAndTimeForm.startTimePickerLabel": "Start time",
+  "BookingStartDateAndTimeForm.startTimePickerPlaceholder": "Choose start time",
+  "BookingStartDateAndTimeForm.startTimePickerRequired": "Required",
+  "BookingStartDateAndTimeForm.endTimePickerLabel": "End time",
+  "BookingStartDateAndTimeForm.endTimePickerPlaceholder": " ",
+  "BookingStartDateAndTimeForm.endTimePickerRequired": "Required",
   "CheckoutPage.bookingTimeNotAvailableMessage": "Unfortunately, the requested time is already booked.",
   "CheckoutPage.chargeDisabledMessage": "This provider's payout information is incomplete so this listing cannot be booked. Please contact the marketplace administrators.",
   "CheckoutPage.errorlistingLinkText": "the sauna page",
