add translation for unit type Hour in booking breakdown

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -47,6 +47,7 @@
   "Avatar.deletedUserDisplayName": "Deleted user",
   "BookingBreakdown.baseUnitDay": "{unitPrice} * {quantity, number} {quantity, plural, one {day} other {days}}",
   "BookingBreakdown.baseUnitNight": "{unitPrice} * {quantity, number} {quantity, plural, one {night} other {nights}}",
+  "BookingBreakdown.baseUnitHour": "{unitPrice} * {quantity, number} {quantity, plural, one {hour} other {hours}}",
   "BookingBreakdown.baseUnitQuantity": "{unitPrice} * {quantity, number} {quantity, plural, one {person} other {persons}}",
   "BookingBreakdown.bookingEnd": "Booking end",
   "BookingBreakdown.bookingStart": "Booking start",
@@ -61,8 +62,10 @@
   "BookingBreakdown.providerTotalDeclined": "Final sum",
   "BookingBreakdown.providerTotalDefault": "You'll make",
   "BookingBreakdown.providerTotalDelivered": "You made",
-  "BookingBreakdown.quantity": "{quantity, number} {quantity, plural, one {person} other {persons}}",
-  "BookingBreakdown.quantityUnit": "Number of persons",
+  "BookingBreakdown.quantity": "{quantity, number} {quantity, plural, one {unit} other {units}}",
+  "BookingBreakdown.quantityHour": "{quantity, number} {quantity, plural, one {hour} other {hours}}",
+  "BookingBreakdown.quantityHourTitle": "Number of hours",
+  "BookingBreakdown.quantityUnit": "Number of units",
   "BookingBreakdown.refund": "Refund",
   "BookingBreakdown.refundCustomerFee": "Refund Saunatime fee",
   "BookingBreakdown.refundProviderFee": "Refund Saunatime fee",
