adjust en translation for payment type in booking panel

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -113,6 +113,9 @@
   "BookingStartDateAndTimeForm.endTimeLabel": "End time",
   "BookingStartDateAndTimeForm.endTimePlaceholder": " ",
   "BookingStartDateAndTimeForm.endTimeRequired": "Required",
+  "BookingStartDateAndTimeForm.paymentTypeLabel": "Payment type",
+  "BookingStartDateAndTimeForm.paymentTypePlaceholder": "Choose a payment type",
+  "BookingStartDateAndTimeForm.paymentTypeRequired": "Required",
   "CheckoutPage.bookingTimeNotAvailableMessage": "Unfortunately, the requested time is already booked.",
   "CheckoutPage.chargeDisabledMessage": "This provider's payout information is incomplete so this listing cannot be booked. Please contact the marketplace administrators.",
   "CheckoutPage.errorlistingLinkText": "the sauna page",
