--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -55,6 +55,8 @@
   "BookingBreakdown.commissionFeeNote": "* The fee helps us run the platform and provide the best possible service to you!",
   "BookingBreakdown.dayCount": "{count, number} {count, plural, one {day} other {days}}",
   "BookingBreakdown.nightCount": "{count, number} {count, plural, one {night} other {nights}}",
+  "BookingBreakdown.paymentTypeTitle": "Payment type",
+  "BookingBreakdown.paymentType": "{paymentType}",
   "BookingBreakdown.pricePerDay": "Price per day",
   "BookingBreakdown.pricePerNight": "Price per night",
   "BookingBreakdown.pricePerQuantity": "Price per person",
